@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-10-15T01:43:00Z",
-  "count" : 128,
-  "count_minmax" : [ 128, 128 ],
-  "count_decinc" : [ -0, +128 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 2, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "timestamp" : "2024-10-28T01:46:30Z",
+  "count" : 52,
+  "count_minmax" : [ 52, 128 ],
+  "count_decinc" : [ -76, +128 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 2 ],
+  "uniques_decinc" : [ -1, +2 ]
 }
