@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-10-27T01:48:14Z",
-  "count" : 23,
-  "count_minmax" : [ 23, 23 ],
-  "count_decinc" : [ -0, +23 ],
+  "timestamp" : "2024-10-28T01:46:30Z",
+  "count" : 127,
+  "count_minmax" : [ 23, 127 ],
+  "count_decinc" : [ -0, +127 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
