@@ -1,27 +1,18 @@
 {
-  "timestamp" : "2024-10-27T01:48:14Z",
-  "count_outdated" : 229503,
-  "uniques_outdated" : 2267,
-  "count" : 231319,
+  "timestamp" : "2024-10-28T01:46:30Z",
+  "count_outdated" : 229633,
+  "uniques_outdated" : 2270,
+  "count" : 231423,
   "uniques" : 2291,
   "clones" : [
     {
-      "timestamp": "2024-10-13T00:00:00Z",
-      "count": 55,
-      "count_minmax": [ 55, 130 ],
-      "count_decinc": [ 75, 130 ],
-      "uniques": 3,
-      "uniques_minmax": [ 3, 3 ],
-      "uniques_decinc": [ 0, 3 ]
-    },
-    {
       "timestamp": "2024-10-14T00:00:00Z",
-      "count": 128,
-      "count_minmax": [ 128, 128 ],
-      "count_decinc": [ 0, 128 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count": 52,
+      "count_minmax": [ 52, 128 ],
+      "count_decinc": [ 76, 128 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2024-10-15T00:00:00Z",
@@ -133,9 +124,9 @@
     },
     {
       "timestamp": "2024-10-27T00:00:00Z",
-      "count": 23,
-      "count_minmax": [ 23, 23 ],
-      "count_decinc": [ 0, 23 ],
+      "count": 127,
+      "count_minmax": [ 23, 127 ],
+      "count_decinc": [ 0, 127 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
