@@ -1,16 +1,11 @@
 {
-  "count": 1741,
-  "uniques": 10,
+  "count": 1714,
+  "uniques": 7,
   "clones": [
     {
-      "timestamp": "2024-10-13T00:00:00Z",
-      "count": 55,
-      "uniques": 3
-    },
-    {
       "timestamp": "2024-10-14T00:00:00Z",
-      "count": 128,
-      "uniques": 2
+      "count": 52,
+      "uniques": 1
     },
     {
       "timestamp": "2024-10-15T00:00:00Z",
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2024-10-27T00:00:00Z",
-      "count": 23,
+      "count": 127,
       "uniques": 1
     }
   ]
