@@ -1,3 +1,12 @@
+2024-10-28T01:46:30Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11545848584 # 462
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-28
+* notice: last 14d: unq all: 7 1714
+* notice: prev accum: outdated-unq outdated-all / unq all: 2267 229503 / 2291 231319
+* notice: next accum: outdated-unq outdated-all / unq all: 2270 229633 / 2291 231423
+* notice: prev exec diff / last date diff / accum: unq all: +0 +104 -1 -76 / +1 +127 -0 -0 / 1 127
+* notice: removed / changed dates: [2024-10-13] / [2024-10-14 2024-10-27]
+
 2024-10-27T01:48:14Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11536626887 # 461
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-27
